k8/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awschallengeapp
  namespace: production
spec:
  replicas: 3
  selector:
    matchLabels:
      app: awschallengeimageapp
  template:
    metadata:
      labels:
        app: awschallengeimageapp
    spec:
      containers:
      - name: awschallengecontainter
        image: ghcr.io/daniel55247/awschallenge/awschallengeimage:latest
        ports:
        - containerPort: 8080
        command: ["nginx", "-g", "daemon off;"]
