k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: awschallenservice
  namespace: production
spec:
  selector:
    app: awschallengeapp
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
